--- a/Resources/views/Block/edit.html.twig
+++ b/Resources/views/Block/edit.html.twig
@@ -1,4 +1,4 @@
-{% extends 'PageBundle::layout.html.twig' %}
+{% extends 'AzhuroPageBundle::layout.html.twig' %}
 
 {% block container %}
     <h1>Page edit</h1>
