--- a/Resources/views/Index/homepage.html.twig
+++ b/Resources/views/Index/homepage.html.twig
@@ -1,4 +1,4 @@
-{% extends 'PageBundle::layout.html.twig' %}
+{% extends 'AzhuroPageBundle::layout.html.twig' %}
 
 {% block page_header %}
     <h1>{{ page.title }}</h1>
