--- a/Resources/views/Page/new.html.twig
+++ b/Resources/views/Page/new.html.twig
@@ -1,4 +1,4 @@
-{% extends 'PageBundle::layout.html.twig' %}
+{% extends 'AzhuroPageBundle::layout.html.twig' %}
 
 {% block container %}
     <h1>Page creation</h1>
@@ -10,7 +10,7 @@
 
     <ul>
         <li>
-            <a href="{{ path('page_index') }}">Back to the list</a>
+            <a href="{{ path('azhuro_page_index') }}">Back to the list</a>
         </li>
     </ul>
 {% endblock %}
