Add layout and admin for Sonata

--- a/Resources/views/Index/index.html.twig
+++ b/Resources/views/Index/index.html.twig
@@ -1,7 +1,6 @@
-{% extends 'AzhuroPageBundle::layout.html.twig' %}
+{% extends ['pageLayout.html.twig', 'AzhuroPageBundle::layout.html.twig'] %}
 
 {% block content %}
-
     <table class="table">
         <tbody>
         <tr>
